[package]

name = "maud-iron"
version = "0.0.1"
authors = [ "vycb <vycb777@gmail.com>" ]
license = "MIT"
readme = "README.md"

[dependencies]
iron = { version = "*", default-features = false }
plugin = "*"
log = "*"

[dependencies.maud]
path = "../maud/maud"

[dependencies.maud_macros]
path = "../maud/maud_macros"

[features]
default = []
